61-display-location-shipper

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">XpreshoesShipper</string>
+    <string name="title_activity_tracking_order">Map</string>
 </resources>
